Created media querry for desktop version

--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
 
 <body>
     <header>
+        <nav>
+            <a href="#">Hello</a>
+            <a href="#">Portfolio</a>
+            <a href="#">About</a>
+            <a href="#">Contact</a>
+        </nav>
         <img src="/images/ic_menu.svg" alt="Menu Icon" class="header-icon menu-icon" />
     </header>
     <main>
@@ -30,143 +36,148 @@
       </section>
       <!-- PROJECT SECTION -->
       <section class="projects">
-        <h2 class="sub-heading" >Projects</h2>
-        <!-- Project 01 -->
-        <section class="project">
-          <img
-            src="images/Rectangle_21.svg"
-            alt="Project 1"
-            class="project-image"
-          />
-          <div class="project-box">
-            <h3 class="project-name">Project name goes here</h3>
-            <div class="language-container">
-              <span class="language">HTML/CSS</span>
-              <span class="language">Ruby on Rails</span>
-              <span class="language">JavaScript</span>
-            </div>
-            <a href="#" class="button dark-button see-project"
-              >See this project <i class="fa-solid fa-arrow-right"></i
-            ></a>
-            </div>
-        </section>
-        <!-- Project 02 -->
-        <section class="project">
-            <img src="images/Rectangle_22.svg" alt="Project 1" class="project-image" />
-            <div class="project-box">
-                <h3 class="project-name">Project name goes here</h3>
-                <div class="language-container">
-                    <span class="language">HTML/CSS</span>
-                    <span class="language">Ruby on Rails</span>
-                    <span class="language">JavaScript</span>
-                </div>
-                <a href="#" class="button dark-button see-project">See this project <i class="fa-solid fa-arrow-right"></i
-            ></a>
-            </div>
-        </section>
-        <!-- Project 03 -->
-        <section class="project">
-            <img src="images/Rectangle_23.svg" alt="Project 1" class="project-image" />
-            <div class="project-box">
-                <h3 class="project-name">Project name goes here</h3>
-                <div class="language-container">
-                    <span class="language">HTML/CSS</span>
-                    <span class="language">Ruby on Rails</span>
-                    <span class="language">JavaScript</span>
-                </div>
-                <a href="#" class="button dark-button see-project">See this project <i class="fa-solid fa-arrow-right"></i
-            ></a>
-            </div>
-        </section>
-        <!-- Project 04 -->
-        <section class="project">
-            <img src="images/Rectangle_24.svg" alt="Project 1" class="project-image" />
-            <div class="project-box">
-                <h3 class="project-name">Project name goes here</h3>
-                <div class="language-container">
-                    <span class="language">HTML/CSS</span>
-                    <span class="language">Ruby on Rails</span>
-                    <span class="language">JavaScript</span>
-                </div>
-                <a href="#" class="button dark-button see-project">See this project <i class="fa-solid fa-arrow-right"></i
-            ></a>
-            </div>
-        </section>
-        <!-- Project 05 -->
-        <section class="project">
-            <img src="images/Rectangle_25.svg" alt="Project 1" class="project-image" />
-            <div class="project-box">
-                <h3 class="project-name">Project name goes here</h3>
-                <div class="language-container">
-                    <span class="language">HTML/CSS</span>
-                    <span class="language">Ruby on Rails</span>
-                    <span class="language">JavaScript</span>
-                </div>
-                <a href="#" class="button dark-button see-project">See this project <i class="fa-solid fa-arrow-right"></i
-            ></a>
-            </div>
-        </section>
-        <!-- Project 06 -->
-        <section class="project">
-            <img src="images/Rectangle_26.svg" alt="Project 1" class="project-image" />
-            <div class="project-box">
-                <h3 class="project-name">Project name goes here</h3>
-                <div class="language-container">
-                    <span class="language">HTML/CSS</span>
-                    <span class="language">Ruby on Rails</span>
-                    <span class="language">JavaScript</span>
-                </div>
-                <a href="#" class="button dark-button see-project">See this project <i class="fa-solid fa-arrow-right"></i
-            ></a>
-            </div>
-        </section>
+        <h2 class="project-heading" >Projects</h2>
+        <div class="project-boxes">
+            <!-- Project 01 -->
+        <section class="project p1">
+            <img
+              src="images/Rectangle_21.svg"
+              alt="Project 1"
+              class="project-image"
+            />
+            <div class="project-box pb1">
+              <h3 class="project-name">Project name goes here</h3>
+              <div class="language-container">
+                <span class="language">HTML/CSS</span>
+                <span class="language">Ruby on Rails</span>
+                <span class="language">JavaScript</span>
+              </div>
+              <a href="#" class="button dark-button see-project"
+                >See this project <i class="fa-solid fa-arrow-right"></i
+              ></a>
+              </div>
+          </section>
+          <!-- Project 02 -->
+          <section class="project p2">
+              <img src="images/Rectangle_22.svg" alt="Project 1" class="project-image" />
+              <div class="project-box pb2">
+                  <h3 class="project-name">Project name goes here</h3>
+                  <div class="language-container">
+                      <span class="language">HTML/CSS</span>
+                      <span class="language">Ruby on Rails</span>
+                      <span class="language">JavaScript</span>
+                  </div>
+                  <a href="#" class="button dark-button see-project">See this project <i class="fa-solid fa-arrow-right"></i
+              ></a>
+              </div>
+          </section>
+          <!-- Project 03 -->
+          <section class="project p3">
+              <img src="images/Rectangle_23.svg" alt="Project 1" class="project-image" />
+              <div class="project-box pb3">
+                  <h3 class="project-name">Project name goes here</h3>
+                  <div class="language-container">
+                      <span class="language">HTML/CSS</span>
+                      <span class="language">Ruby on Rails</span>
+                      <span class="language">JavaScript</span>
+                  </div>
+                  <a href="#" class="button dark-button see-project">See this project <i class="fa-solid fa-arrow-right"></i
+              ></a>
+              </div>
+          </section>
+          <!-- Project 04 -->
+          <section class="project p4">
+              <img src="images/Rectangle_24.svg" alt="Project 1" class="project-image" />
+              <div class="project-box pb4">
+                  <h3 class="project-name">Project name goes here</h3>
+                  <div class="language-container">
+                      <span class="language">HTML/CSS</span>
+                      <span class="language">Ruby on Rails</span>
+                      <span class="language">JavaScript</span>
+                  </div>
+                  <a href="#" class="button dark-button see-project">See this project <i class="fa-solid fa-arrow-right"></i
+              ></a>
+              </div>
+          </section>
+          <!-- Project 05 -->
+          <section class="project p5">
+              <img src="images/Rectangle_25.svg" alt="Project 1" class="project-image" />
+              <div class="project-box pb5">
+                  <h3 class="project-name">Project name goes here</h3>
+                  <div class="language-container">
+                      <span class="language">HTML/CSS</span>
+                      <span class="language">Ruby on Rails</span>
+                      <span class="language">JavaScript</span>
+                  </div>
+                  <a href="#" class="button dark-button see-project">See this project <i class="fa-solid fa-arrow-right"></i
+              ></a>
+              </div>
+          </section>
+          <!-- Project 06 -->
+          <section class="project p6">
+              <img src="images/Rectangle_26.svg" alt="Project 1" class="project-image" />
+              <div class="project-box pb6">
+                  <h3 class="project-name">Project name goes here</h3>
+                  <div class="language-container">
+                      <span class="language">HTML/CSS</span>
+                      <span class="language">Ruby on Rails</span>
+                      <span class="language">JavaScript</span>
+                  </div>
+                  <a href="#" class="button dark-button see-project">See this project <i class="fa-solid fa-arrow-right"></i
+              ></a>
+              </div>
+          </section>
+        </div>
         </section>
         <!-- ABOUT SECTION -->
         <section class="about">
-            <h2>About</h2>
-            <p>
-                I'm a Software Developer located in Nigeria. I have great passion for UI creation, effect, animation and dynamic user experiences.<br /><br /> I derive great pleasure in using software programs to develop solutions to problems while having
-                a high test of excellence and good attention to detail. Fan of Liverpool FC, love TV series and sports.
-                <br /><br /> Interested in both Front-End and Back-End spectrum. I am also interested in working on ambitious projects with positive people and goal oriented companies.
-            </p>
-            <a href="#" class="button dark-button get-cv">Get my CV <i class="fa-solid fa-download"></i
-        ></a>
-            <div class="about-box">
-                <div class="about-lang-color">
-                    <div class="about-languages">
-                        <p class="about-list-heading">Languages</p>
-                        <ul class="about-list">
-                            <li>JavaScript (ES5/ES6)</li>
-                            <li>Ruby</li>
-                            <li>Python</li>
-                            <li>C/C++</li>
-                            <li>HTML</li>
-                            <li>CSS</li>
-                        </ul>
-                    </div>
+            <div class="about-container">
+                <div class="about-note">
+                    <h2>About</h2>
+                    <p>
+                    I'm a Software Developer located in Nigeria. I have great passion for UI creation, effect, animation and dynamic user experiences.<br /><br /> I derive great pleasure in using software programs to develop solutions to problems while having
+                    a high test of excellence and good attention to detail. Fan of Liverpool FC, love TV series and sports.
+                    <br /><br /> Interested in both Front-End and Back-End spectrum. I am also interested in working on ambitious projects with positive people and goal oriented companies.
+                    </p>
+                    <a href="#" class="button dark-button get-cv">Get my CV <i class="fa-solid fa-download"></i></a>
                 </div>
-                <div class="about-fwork-color">
-                    <div class="about-framework">
-                        <p class="about-list-heading">Frame Works</p>
-                        <ul class="about-list">
-                            <li>Bootstrap</li>
-                            <li>Ruby on rails</li>
-                            <li>RSpec</li>
-                            <li>Capibara</li>
-                            <li>Selenium</li>
-                        </ul>
+                <div class="about-box">
+                    <div class="about-lang-color">
+                        <div class="about-languages">
+                            <p class="about-list-heading">Languages</p>
+                            <ul class="about-list">
+                                <li>JavaScript (ES5/ES6)</li>
+                                <li>Ruby</li>
+                                <li>Python</li>
+                                <li>C/C++</li>
+                                <li>HTML</li>
+                                <li>CSS</li>
+                            </ul>
+                        </div>
                     </div>
-                </div>
-                <div class="about-skills-color">
-                    <div class="about-skills">
-                        <p class="about-list-heading">Skills</p>
-                        <ul class="about-list">
-                            <li>Codekit</li>
-                            <li>Codepen</li>
-                            <li>GitHub</li>
-                            <li>GitLAb</li>
-                            <li>Terminal</li>
-                        </ul>
+                    <div class="about-fwork-color">
+                        <div class="about-framework">
+                            <p class="about-list-heading">Frame Works</p>
+                            <ul class="about-list">
+                                <li>Bootstrap</li>
+                                <li>Ruby on rails</li>
+                                <li>RSpec</li>
+                                <li>Capibara</li>
+                                <li>Selenium</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="about-skills-color">
+                        <div class="about-skills">
+                            <p class="about-list-heading">Skills</p>
+                            <ul class="about-list">
+                                <li>Codekit</li>
+                                <li>Codepen</li>
+                                <li>GitHub</li>
+                                <li>GitLAb</li>
+                                <li>Terminal</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -175,18 +186,19 @@
     <footer>
            <!-- CONTACT FORM -->
            <section class="contact-form">
-            <div class="contact-form-background"></div>
-            <div class="contact-form-container">
-                <h2 class="contact-header">Get started</h2>
-                <p>
-                    I am interested in remote & freelance opportunities - especially ambitious or large projects. However, if you have other request or question, don't hesitate to use the form.
-                </p>
-                <form action="https://formspree.io/f/xlezygjj" method="POST">
-                    <input name="name" id="name" type="text" placeholder="Your name" maxlength="30" required/>
-                    <input name="email" id="email" type="email" placeholder="Your email" required/>
-                    <textarea id="message" cols="30" rows="10" maxlength="500" placeholder="Enter your message here..." required></textarea>
-                    <button type="submit" class="button dark-button contact-button">Start collaboration</button>
-                </form>
+            <div class="contact-form-background">
+                <div class="contact-form-container">
+                    <h2 class="contact-header">Get started</h2>
+                    <p>
+                        I am interested in remote & freelance opportunities - especially ambitious or large projects. However, if you have other request or question, don't hesitate to use the form.
+                    </p>
+                    <form action="https://formspree.io/f/xlezygjj" method="POST">
+                        <input name="name" id="name" type="text" placeholder="Your name" maxlength="30" required/>
+                        <input name="email" id="email" type="email" placeholder="Your email" required/>
+                        <textarea id="message" cols="30" rows="10" maxlength="500" placeholder="Enter your message here..." required></textarea>
+                        <button type="submit" class="button dark-button contact-button">Start collaboration</button>
+                    </form>
+                </div>
             </div>
         </section>
         <!-- FOOTER SECTION -->
