--- a/index.html
+++ b/index.html
@@ -10,18 +10,22 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins&display=swap" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/579b112cc6.js" crossorigin="anonymous"></script>
+    <script defer src="main.js"></script>
     <title>Praises Tula</title>
 </head>
 
 <body>
     <header>
+        <div class="header-icon">
+            <i class="menu-icon fa-solid fa-bars"></i>
+            <i class="menu-close fa-solid fa-xmark"></i>
+        </div>
         <nav>
             <a href="#">Hello</a>
             <a href="#">Portfolio</a>
             <a href="#">About</a>
             <a href="#">Contact</a>
         </nav>
-        <i class="header-icon menu-icon fa-solid fa-bars"></i>
     </header>
     <main>
         <!-- HEADLINE SECTION -->
